# leanlab

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUTURE.md  README.md  SECURITY.md  handoff.md  pyproject.toml
.archik/: .version  ENGINEERING_LOOP.md  PRINCIPLES.md  SUPERPOWERS.md  actors.archik.actors.yaml  build-task.archik.seq.yaml  coding-board.archik.seq.yaml  diagnose-check.archik.seq.yaml  diagnose-fix.archik.seq.yaml  init-draft.archik.seq.yaml  init-lab.archik.seq.yaml  main.archik.yaml  metric-dashboard.archik.seq.yaml  run-experiments-fix.archik.seq.yaml  run-experiments-happy.archik.seq.yaml  run-rank.archik.seq.yaml  spec-task.archik.seq.yaml
.archik/traces/: build-task.implement-to-green.archik.trace.json  diagnose-lab.check-wiring.archik.trace.json  diagnose-lab.fix-wiring.archik.trace.json  init-lab.approve-eval-loop.archik.trace.json  init-lab.draft-task-and-objective.archik.trace.json  run-experiments.fix-on-error.archik.trace.json  run-experiments.rank-by-objective.archik.trace.json  run-experiments.score-and-log.archik.trace.json  spec-task.draft-and-lock-acceptance.archik.trace.json  watch-progress.coding-board.archik.trace.json  watch-progress.metric-dashboard.archik.trace.json
.archik/usecases/: build-task.archik.uc.yaml  diagnose-lab.archik.uc.yaml  init-lab.archik.uc.yaml  run-experiments.archik.uc.yaml  spec-task.archik.uc.yaml  watch-progress.archik.uc.yaml
.github/: PULL_REQUEST_TEMPLATE.md  RELEASING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
.leanlab/house-prices/: Critic_Feedback.md  Director_Notes.md  evaluation.py  lab.json  results.jsonl  task.md  validate.py
docs/: OVERVIEW.md  USAGE.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
leanlab/: __init__.py  cli.py
leanlab/core/: __init__.py  doctor.py  init.py  (+2 more)
scripts/: record_trace.py  release.py
tests/: test_agents.py  test_coding_board.py  test_coding_engineer.py  test_coding_events.py  test_coding_gate.py  test_coding_git.py  test_coding_locks.py  test_coding_personas.py  test_coding_playbook.py  test_coding_spec.py  test_coding_transcripts.py  test_core.py  test_doctor.py  test_init.py  test_monitor.py  test_run_experiments_fix.py  test_run_experiments_happy.py  test_tooling.py
(+47 files in other folders)
