[project]
name = "leanlab"
version = "0.2.4"
description = "A self-improving experiment lab for AI agents — evolve ML experiments against a frozen metric with a Worker/Director/Critic loop and a live dashboard."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Bashar", email = "welcomebachar@gmail.com" }]
keywords = ["llm", "claude", "agents", "evaluation", "self-improving", "cli", "experiment", "lab"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
# CLI UX only — the engine logic stays dependency-free; ML libs belong to the lab.
dependencies = [
    "rich>=15.0.0",
    "questionary>=2",
]

[project.urls]
Homepage = "https://github.com/bacharSalleh/leanlab"
Repository = "https://github.com/bacharSalleh/leanlab"
Issues = "https://github.com/bacharSalleh/leanlab/issues"
Changelog = "https://github.com/bacharSalleh/leanlab/blob/main/CHANGELOG.md"

[project.scripts]
leanlab = "leanlab.cli:main"

[dependency-groups]
# Tooling + the deps the bundled example lab (house-prices) needs to run under tests.
# leanlab itself has no third-party runtime deps — ML libs belong to the *lab*, not the tool.
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "lightgbm>=4.6.0",
    "catboost>=1.2.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["leanlab"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
# Defaults are E + F (style + real bugs). Relax the compact one-liner / long-line style
# this codebase uses deliberately; keep all the F checks (undefined names, unused, etc.).
ignore = ["E501", "E702"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]   # tests set up fixtures/constants before a few imports
